Fixed content shift when scrolling freezes during modal opening.

--- a/src/modal/css/Modal.css
+++ b/src/modal/css/Modal.css
@@ -1,5 +1,10 @@
 body.freeze {
 	overflow: hidden;
+	padding-right: 15px;
+}
+
+body.freeze header {
+	left: -7.5px;
 }
 
 #modal-overlay {
